==> kthenrique/Haste-Space/xmc4500/src/lis3dh_driver.c <==
#include <lis3dh_driver.h>
#include <xmc_gpio.h>
#include <xmc_i2c.h>
#define LIS3DH_RD_ADR				(0x18<<1)

u8_t LIS3DH_ReadReg(u8_t Reg, u8_t* Data) {

    /* RECEIVING DATA FROM LIS3DH WITH I2C OF XMC4500 */

    XMC_I2C_CH_MasterStart(XMC_I2C1_CH0, id_tmp, XMC_I2C_CH_CMD_WRITE);
    while((XMC_I2C_CH_GetStatusFlag(XMC_I2C1_CH0) & XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED) == 0U)
    {
        /* wait for ACK */
    }
    XMC_I2C_CH_ClearStatusFlag(XMC_I2C1_CH0, XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED);

    XMC_I2C_CH_MasterTransmit (XMC_I2C1_CH0, Reg);
    while ( (XMC_I2C_CH_GetStatusFlag (XMC_I2C1_CH0) & XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED) == 0U) {
        /* wait for ACK */
    }
    XMC_I2C_CH_ClearStatusFlag (XMC_I2C1_CH0, XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED);


    /* Read from REG */
    XMC_I2C_CH_MasterRepeatedStart (XMC_I2C1_CH0, id_tmp, XMC_I2C_CH_CMD_READ);
    while ( (XMC_I2C_CH_GetStatusFlag (XMC_I2C1_CH0) & XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED) == 0U) {
        /* wait for ACK */
    }
    XMC_I2C_CH_ClearStatusFlag (XMC_I2C1_CH0, XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED);

    XMC_I2C_CH_MasterReceiveNack (XMC_I2C1_CH0);

    while ( (XMC_USIC_CH_GetReceiveBufferStatus (XMC_I2C1_CH0) !=
                (uint32_t) XMC_USIC_CH_RBUF_STATUS_DATA_VALID1) && ( (uint32_t) XMC_USIC_CH_GetReceiveBufferStatus (XMC_I2C1_CH0)
                    != (uint32_t) XMC_USIC_CH_RBUF_STATUS_DATA_VALID0));

    *Data = XMC_I2C_CH_GetReceivedData (XMC_I2C1_CH0);

    XMC_I2C_CH_MasterStop (XMC_I2C1_CH0);

    /* FINISHED RECEIVING DATA FROM LIS3DH WITH I2C OF XMC4500 */

    //To be completed with either I2c or SPI reading function
    //i.e. *Data = SPI_Mems_Read_Reg( Reg );  
    return 1;
}

u8_t LIS3DH_WriteReg(u8_t WriteAddr, u8_t Data) {
    XMC_ASSERT ("XMC_USIC_CH_Enable: XMC_I2C1_CH0 not valid",
            XMC_USIC_IsChannelValid (XMC_I2C1_CH0));


    XMC_I2C_CH_MasterStart (XMC_I2C1_CH0, id_tmp, XMC_I2C_CH_CMD_WRITE);
    while ( (XMC_I2C_CH_GetStatusFlag (XMC_I2C1_CH0) & XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED) == 0U) {
        /* wait for ACK */
    }
    XMC_I2C_CH_ClearStatusFlag (XMC_I2C1_CH0, XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED);

    XMC_I2C_CH_MasterTransmit (XMC_I2C1_CH0, WriteAddr);
    while ( (XMC_I2C_CH_GetStatusFlag (XMC_I2C1_CH0) & XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED) == 0U) {
        /* wait for ACK */
    }
    XMC_I2C_CH_ClearStatusFlag (XMC_I2C1_CH0, XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED);

    /* Write to REG */
    XMC_I2C_CH_MasterTransmit (XMC_I2C1_CH0, Data);
    while ( (XMC_I2C_CH_GetStatusFlag (XMC_I2C1_CH0) & XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED) == 0U) {
        /* wait for ACK */
    }
    XMC_I2C_CH_ClearStatusFlag (XMC_I2C1_CH0, XMC_I2C_CH_STATUS_FLAG_ACK_RECEIVED);

    XMC_I2C_CH_MasterStop (XMC_I2C1_CH0);

    //return Data;

    //To be completed with either I2c or SPI writing function
    //i.e. SPI_Mems_Write_Reg(WriteAddr, Data);  
    return 1;
}
